--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -37,13 +37,16 @@
   </div>
 
   <div class="field">
-    <%= form.label :status_id %>
-    <%= form.text_field :status_id %>
+    <%= form.label :status %>
+    <%= form.collection_select :status_id, Status.all, :id, :name %>
+
   </div>
 
+
   <div class="field">
-    <%= form.label :job_id %>
-    <%= form.text_field :job_id %>
+    <%= form.label :applying_for %>
+    <%= form.collection_select :job_id, Job.all, :id, :name %>
+
   </div>
 
   <div class="field">
