--- a/app/views/interviews/_form.html.erb
+++ b/app/views/interviews/_form.html.erb
@@ -10,15 +10,17 @@
       </ul>
     </div>
   <% end %>
-
+  <%= byebug%>
   <div class="field">
-    <%= form.label :application_id %>
-    <%= form.text_field :application_id %>
+    <%= form.label :Application %>
+    <%= form.collection_select :application_id, Application.where(status_id: 1), :id, :name %>
+
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :Interviewer%>
+    <%= form.collection_select :user_id,User.where(role_id:2), :id, :name %>
+
   </div>
 
   <div class="field">
@@ -27,8 +29,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :status_id %>
-    <%= form.text_field :status_id %>
+    <%= form.label :status %>
+    <%= form.collection_select :status_id, Status.all, :id, :name %>
   </div>
 
   <div class="field">
