--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Interview</h1>
 
-<%= render 'form', interview: @interview %>
+<%= render 'form', interview: @interview, application: @application %>
 
 <%= link_to 'Back', interviews_path %>
