--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -27,3 +27,5 @@
 
 <%= link_to 'Edit', edit_interview_path(@interview) %> |
 <%= link_to 'Back', interviews_path %>
+<%# <%= link_to 'Release Offer' , release_offer_letter_path %> %>
+
