--- a/app/views/login/show.html.erb
+++ b/app/views/login/show.html.erb
@@ -1,2 +1,3 @@
-<h1> Welcome, please login to continue </h1>
-<a href="/auth/google_oauth2">Sign in with Google</a>
+<h1> BEAUTIFUL CODE HIRING</h1>
+<br>
+<button><a href="/auth/google_oauth2">Sign in with your beautiful code account</a></button>
