--- a/app/views/interviews/scheduled_interviews.html.erb
+++ b/app/views/interviews/scheduled_interviews.html.erb
@@ -1,12 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Interviews</h1>
+<h1> Scheduled Interviews</h1>
 
 <table>
   <thead>
     <tr>
+      <th>Application Id</th>
       <th>Application</th>
-      <th>User</th>
+      <th>Interviewer</th>
       <th>Scheduled date</th>
       <th>Status</th>
       <th>Interview feedback</th>
@@ -15,8 +16,9 @@
   </thead>
 
   <tbody>
-    <% @interviews.each do |interview| %>
+    <% @scheduled_interviews.each do |interview| %>
       <tr>
+        <td><%= interview.application_id %></td>
         <td><%= interview.application.name %></td>
         <td><%= interview.user.name %></td>
         <td><%= interview.scheduled_date %></td>
@@ -24,7 +26,6 @@
         <td><%= interview.interview_feedback %></td>
         <td><%= link_to 'Show', interview %></td>
         <td><%= link_to 'Edit', edit_interview_path(interview) %></td>
-        <td><%= link_to 'Destroy', interview, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
