--- a/app/views/manager/index.html.erb
+++ b/app/views/manager/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container "style="padding: 10%">
-    <h1 class="display-4" style="text-align:center">Hello Manager!</h1>
+    <h1 class="display-4" style="text-align:center">Hello <%=@user_name%>!</h1>
     <p class="lead alert alert-primary" style="text-align:center">Create Applications or View All Your Applications</p>
     <hr class="my-4">
 		<div class="container" style="height" >
