--- a/app/views/login/show.html.erb
+++ b/app/views/login/show.html.erb
@@ -1,3 +1,5 @@
-<h1> BEAUTIFUL CODE HIRING</h1>
-<br>
-<button><a href="/auth/google_oauth2">Sign in with your beautiful code account</a></button>
+<div class="jumbotron text-center">
+  <h3 class="display-4 ">BEAUTIFUL CODE HIRING</h3>
+  <hr class="my-4">
+  <button class="btn btn-info"><a href="/auth/google_oauth2">Sign in with your beautiful code account</a></button>
+</div>
