--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+.login-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center-div {
+  margin: 0 auto;
+  width: 80%
+}
