--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -1,5 +1,13 @@
+<div class="container center_div">
+<div class="row">
+<div class="col-3">
+</div>
+<div class="col-9">
 <h1>New Application</h1>
-
 <%= render 'form', application: @application %>
-
 <%= link_to 'Back', applications_path %>
+</div>
+
+</div>
+
+</div>
