index.html in application not working

--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -77,10 +77,7 @@
     </div>
   </div>
 
-  <div class="actions">
-    <button class="btn btn-submit">
-      <%= form.submit %>
-    </button>
-  </div>
+  <button class="btn btn-info" type="submit">Submit</button>
+
 
 <% end %>
