--- a/app/views/login/show.html.erb
+++ b/app/views/login/show.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
   <h3 class="display-4 ">BEAUTIFUL CODE HIRING</h3>
   <hr class="my-4">
-  <button class="btn btn-info"><a href="/auth/google_oauth2">Sign in with your beautiful code account</a></button>
+  <button class="btn btn-warning"><a href="/auth/google_oauth2">Sign in with your beautiful code account</a></button>
 </div>
