--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -1,13 +1,11 @@
-<div class="container center_div">
-<div class="row">
+<div class="container center_div ">
+<div class="row bg-light">
 <div class="col-3">
 </div>
-<div class="col-9">
-<h1>New Application</h1>
+<div class="col-9 pt-3">
+<h2>New Application</h2>
 <%= render 'form', application: @application %>
 <%= link_to 'Back', applications_path %>
 </div>
-
 </div>
-
 </div>
