--- a/app/views/interviews/edit.html.erb
+++ b/app/views/interviews/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Interview</h1>
-
-<%= render 'form', interview: @interview %>
-
-<%= link_to 'Show', @interview %> |
-<%= link_to 'Back', interviews_path %>
+<div class="container center_div ">
+	<div class="row bg-light">
+		<div class="col-3">
+		</div>
+		<div class="col-9 pt-3">
+			<h2>Editing Interview</h2>
+			<%= render 'form', interview: @interview %>
+			<%= link_to 'Show', @interview %> |
+			<%= link_to 'Back', scheduled_interviews_path %>
+		</div>
+	</div>
+</div>
