--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -4,13 +4,13 @@
   <div class="row bg-light">
     <div class="col-1">
     </div>
-    <div class="col-9 ">
+    <div class="col-11 ">
     <h1>Applications</h1>
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
   <thead>
     <tr>
       <th scope="col">Name</th>
-      <th scope="col"> Email</th>
+      <th scope="col">Email</th>
       <th scope="col">Mobile</th>
       <th scope="col">Experience</th>
       <th scope="col">Resume</th>
@@ -18,7 +18,7 @@
       <th scope="col">Job</th>
       <th scope="col">Joining date</th>
       <th scope="col">Rejection reason</th>
-      <th scope="col" colspan="3"></th>
+      <th scope="col" colspan="3">Options</th>
     </tr>
   </thead>
 
@@ -46,9 +46,6 @@
 <br>
 
 <%= link_to 'New Application', new_application_path %>
-
-    </div>
-    <div class="col-2">
-    </div>
+ </div>
 
 
