ui pause to revert status tables

--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -56,7 +56,7 @@
     </tr>
     <tr>
       <th scope="row">Resume</th>
-      <td><%= @application.resume %></td>
+      <td><%= link_to 'Download', url_for(@application.resume) , :target => "_blank" %></td>
 
     </tr>
 
