--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -43,7 +43,7 @@
 	<div class="form-group">
 		<%= form.label :resume, class: "col-md-4 control-label"  %>
 		<div class="col-md-8">
-			<%= form.text_field :resume, class: "form-control"  %>
+			<%= form.file_field :resume, class: "form-control"  %>
 		</div>
 	</div>
 
