--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,51 +1,49 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
-  <div class="row bg-light">
-    <div class="col-1">
-    </div>
-    <div class="col-11 ">
-    <h1>Applications</h1>
-<table class="table table-striped table-bordered">
-  <thead>
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Mobile</th>
-      <th scope="col">Experience</th>
-      <th scope="col">Resume</th>
-      <th scope="col">Status</th>
-      <th scope="col">Job</th>
-      <th scope="col">Joining date</th>
-      <th scope="col">Rejection reason</th>
-      <th scope="col" colspan="3">Options</th>
-    </tr>
-  </thead>
+	<div class="row bg-light">
+		<div class="col-1">
+		</div>
+		<div class="col-11 ">
+			<h1>Applications</h1>
+			<table class="table table-striped table-bordered">
+				<thead>
+					<tr>
+						<th scope="col">Name</th>
+						<th scope="col">Email</th>
+						<th scope="col">Mobile</th>
+						<th scope="col">Experience</th>
+						<th scope="col">Resume</th>
+						<th scope="col">Status</th>
+						<th scope="col">Job</th>
+						<th scope="col">Joining date</th>
+						<th scope="col">Rejection reason</th>
+						<th scope="col" colspan="3">Options</th>
+					</tr>
+				</thead>
 
-  <tbody>
-    <% @applications.each do |application| %>
-      <tr>
-        <th scope="row"><%= application.name %></th>
-        <td><%= application.email %></td>
-        <td><%= application.mobile %></td>
-        <td><%= application.experience %></td>
-        <td><%= application.resume %></td>
-        <td><%= application.status.name%></td>
-        <td><%= application.job.name %></td>
-        <td><%= application.joining_date %></td>
-        <td><%= application.rejection_reason %></td>
-        <td><%= link_to 'Show', application %></td>
-        <td><%= link_to 'Edit', edit_application_path(application) %></td>
-        <td><%= link_to 'Destroy', application, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+				<tbody>
+					<% @applications.each do |application| %>
+						<tr>
+							<th scope="row"><%= application.name %></th>
+							<td><%= application.email %></td>
+							<td><%= application.mobile %></td>
+							<td><%= application.experience %></td>
+							<td><%= link_to 'Download', url_for(application.resume) , :target => "_blank" %></td>
+							<td><%= application.status.name%></td>
+							<td><%= application.job.name %></td>
+							<td><%= application.joining_date.strftime("%Y-%m-%d") %></td>
+							<td><%= application.rejection_reason %></td>
+							<td><%= link_to 'Show', application %></td>
+							<td><%= link_to 'Edit', edit_application_path(application) %></td>
+							<td><%= link_to 'Destroy', application, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
 
-<br>
+			<br>
 
-<%= link_to 'New Application', new_application_path %>
- </div>
-
-
+			<%= link_to 'New Application', new_application_path %>
+		</div>
