--- a/app/views/applications/accepted_applications.html.erb
+++ b/app/views/applications/accepted_applications.html.erb
@@ -3,7 +3,7 @@
 <div class="container bg-light">
 	<div class="row ">
 		<div class="col-12">
-			<h1>Applications</h1>
+			<h1>Accepted Applications</h1>
 
 			<table class="table table-striped table-bordered" id="myTable">
 				<thead>
@@ -43,7 +43,4 @@
 			</table>
 
 			<br>
-
-			<%= link_to 'New Application', new_application_path %>
-			<%= yield :page_js %>
 		</div>
