--- a/app/views/interviewer/index.html.erb
+++ b/app/views/interviewer/index.html.erb
@@ -9,6 +9,7 @@
 					<%= link_to 'View Scheduled Interviews',scheduled_interviews_path(current_user),{:class => "btn btn-warning btn-lg" } %>
 				</p>
 				<div class="col-4">
+					<%= link_to 'View Completed Interviews',completed_interviews_path(current_user),{:class => "btn btn-warning btn-lg" } %>
 				</div>
 				<p class="col-4 lead" style="float:right">
 					<%= link_to 'View Assigned Interviews',assigned_interviews_path(current_user),{:class => "btn btn-warning btn-lg" } %>
