--- a/app/views/interviews/scheduled_interviews.html.erb
+++ b/app/views/interviews/scheduled_interviews.html.erb
@@ -26,7 +26,7 @@
 							<td><%= interview.application.name %></td>
 							<td><%= interview.user.name %></td>
 							<td><%= interview.scheduled_date %></td>
-							<td><%= interview.status.name %></td>
+							<td><%= interview.interview_status%></td>
 							<td><%= interview.interview_feedback %></td>
 							<td><%= link_to 'Show', interview %></td>
 							<td><%= link_to 'Edit', edit_interview_path(interview) %></td>
