--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,10 +18,11 @@
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<a class="dropdown-item" href="/applications/new">Create</a>
-						<a class="dropdown-item" href="/applications">Open </a>
-						<a class="dropdown-item" href="#">InProgress</a>
-						<a class="dropdown-item" href="#">Approved</a>
-						<a class="dropdown-item" href="#">Rejected</a>
+						<a class="dropdown-item" href="/openapplications">Open </a>
+						<a class="dropdown-item" href="/inprogressapplications/">InProgress</a>
+						<a class="dropdown-item" href="/acceptedapplications">Accepted-closed</a>
+						<a class="dropdown-item" href="/rejectedapplications">Rejected-closed</a>
+						<a class="dropdown-item" href="/applications">all</a>
 					</div>
 				</li>
 			<% else %>
