--- a/app/views/applications/open_applications.html.erb
+++ b/app/views/applications/open_applications.html.erb
@@ -3,7 +3,7 @@
 <div class="container bg-light">
 	<div class="row ">
 		<div class="col-12">
-			<h1>Applications</h1>
+			<h1>Open Applications</h1>
 
 			<table class="table table-striped table-bordered" id="myTable">
 				<thead>
@@ -41,9 +41,5 @@
 					<% end %>
 				</tbody>
 			</table>
-
 			<br>
-
-			<%= link_to 'New Application', new_application_path %>
-			<%= yield :page_js %>
 		</div>
