--- a/app/views/applications/rejected_applications.html.erb
+++ b/app/views/applications/rejected_applications.html.erb
@@ -3,7 +3,7 @@
 <div class="container bg-light">
 	<div class="row ">
 		<div class="col-12">
-			<h1>Applications</h1>
+			<h1> Rejected Applications</h1>
 
 			<table class="table table-striped table-bordered" id="myTable">
 				<thead>
@@ -44,6 +44,4 @@
 
 			<br>
 
-			<%= link_to 'New Application', new_application_path %>
-			<%= yield :page_js %>
 		</div>
