--- a/app/views/interviews/_form.html.erb
+++ b/app/views/interviews/_form.html.erb
@@ -30,7 +30,7 @@
 	<div class="field form-group">
 		<%= form.label :status , class: "col-md-4 control-label" %>
 		<div class="col-md-8">
-			<%= form.collection_select :status_id, Status.all, :id, :name, class: "form-control" %>
+			<%= form.select :interview_status, ["OPEN", "ACCEPTED", "DECLINED", "INTERVIEW DONE"], class: "form-control"  %>
 		</div>
 	</div>
 	<div class="field form-group">
