--- a/app/views/interviews/assigned_interviews.html.erb
+++ b/app/views/interviews/assigned_interviews.html.erb
@@ -26,7 +26,7 @@
 							<td><%= interview.application.name%></td>
 							<td><%= interview.user.name %></td>
 							<td><%= interview.scheduled_date %></td>
-							<td><%= interview.status.name %></td>
+							<td><%= interview.interview_status %></td>
 							<td><%= interview.interview_feedback %></td>
 							<td><%= link_to 'Accept', edit_interview_path(interview.id) %></td>
 							<td><%= link_to 'Decline', interview, method: :delete, data: { confirm: 'Are you sure?' } %></td>
