decline offer working accept not working

--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -75,6 +75,6 @@
 		</div>
 	</div>
 
-	<button class="btn btn-info" type="submit">Submit</button>
+	<button class="btn btn-info ml-3" type="submit">Submit</button>
 
 <% end %>
