--- a/app/views/applications/edit.html.erb
+++ b/app/views/applications/edit.html.erb
@@ -5,8 +5,8 @@
 		<div class="col-9 pt-3">
 			<h2>Editing Application</h2>
 			<%= render 'form', application: @application %>
-			<%= link_to 'Show', @application %> |
-			<%= link_to 'Back', applications_path %>
+			<%= link_to 'Show', @application ,class: "btn btn-info ml-1" %> |
+			<%= link_to 'Back', applications_path, class: "btn btn-info mt-1 ml-3" %>
 		</div>
 	</div>
 </div>
