--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -5,7 +5,7 @@
 		<div class="col-9 pt-3">
 			<h2>New Application</h2>
 			<%= render 'form', application: @application %>
-			<%= link_to 'Back', applications_path %>
+			<%= link_to 'Back', applications_path , class: "btn btn-info mt-1 ml-3"%>
 		</div>
 	</div>
 </div>
