--- a/app/views/interviews/completed_interviews.html.erb
+++ b/app/views/interviews/completed_interviews.html.erb
@@ -35,5 +35,5 @@
 
 			<br>
 
-			<%= link_to 'New Interview', new_interview_path %>
+			<%= link_to 'New Interview', new_interview_path, class: "btn btn-info ml-1" %>
 		</div>
