--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -5,7 +5,7 @@
 		<div class="col-12">
 			<h1>Applications</h1>
 
-			<table class="table table-striped table-bordered" id="myTable">
+			<table class="table table-responsive table-striped table-bordered" id="myTable">
 				<thead>
 					<tr>
 						<th scope="col">Name</th>
@@ -44,6 +44,6 @@
 
 			<br>
 
-			<%= link_to 'New Application', new_application_path %>
+			<%= link_to 'New Application', new_application_path, class: "btn btn-info ml-1"%>
 			<%= yield :page_js %>
 		</div>
