--- a/app/views/interviews/_form.html.erb
+++ b/app/views/interviews/_form.html.erb
@@ -39,5 +39,5 @@
 			<%= form.text_area :interview_feedback, class: "form-control" %>
 		</div>
 	</div>
-	<button class="btn btn-info" type="submit">Update</button>
+	<button class="btn btn-info ml-3" type="submit">Update</button>
 <% end %>
