--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Interview</h1>
-
-<%= render 'form', interview: @interview, application: @application %>
-
-<%= link_to 'Back', interviews_path %>
+<div class="container center_div ">
+	<div class="row bg-light">
+		<div class="col-3">
+		</div>
+		<div class="col-9 pt-3">
+			<h2>New Interview</h2>
+			<%= render 'form', interview: @interview, application: @application %>
+			<%= link_to 'Back', interviews_path, class: "btn btn-info ml-3 mt-1" %>
+		</div>
+	</div>
+</div>
