--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New User</h1>
 
-<%= render 'form', user: @user %>
+<%= render 'form', user: @user, class: "btn btn-info ml-1" %>
 
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path , class: "btn btn-info ml-1"%>
